--- a/trunk/pyerp/fnd/locale/zh_CN/django.po
+++ b/trunk/pyerp/fnd/locale/zh_CN/django.po
@@ -2,12 +2,12 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Django\n"
+"Project-Id-Version: PyERP fnd 0.1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-08-29 11:06-0700\n"
 "PO-Revision-Date: 2008-09-01 15:13+0200\n"
-"Last-Translator: Liang Feng <hutuworm@gmail.com>\n"
-"Language-Team: Simplified Chinese <hutuworm@gmail.com>\n"
+"Last-Translator: Peng Yu <yuhere@gmail.com>\n"
+"Language-Team: Simplified Chinese <yuhere@gmail.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -3930,3 +3930,10 @@ msgstr "%(verbose_name)s 更新成功。"
 msgid "The %(verbose_name)s was deleted."
 msgstr "%(verbose_name)s 已被删除。"
 
+#: fnd resp
+msgid "Application Developer"
+msgstr "应用程序开发者"
+
+#: fnd resp
+msgid "System Adminstrator"
+msgstr "系统管理员"
